added `automata` label to makefile and improved `clean`

--- a/src/makefile
+++ b/src/makefile
@@ -5,7 +5,12 @@ CCFLAGS=-Wall -c
 all:
 	$(CC) $(CCFLAGS) reader.c
 	$(CC) -o main main.c reader.o
+
+automata:
+	$(CC) $(CCFLAGS) node.c
+	$(CC) -o automata automata.c node.o
+
 clean:
 	rm -rf *.o
-	rm -rf *.c
+	rm -rf main automata
 
