added node.c and automata.c to compilation/ added readed to clean

--- a/src/makefile
+++ b/src/makefile
@@ -4,7 +4,9 @@ CCFLAGS=-Wall -c
 
 all:
 	$(CC) $(CCFLAGS) reader.c
-	$(CC) -o main main.c reader.o
+	$(CC) $(CCFLAGS) node.c
+	$(CC) $(CCFLAGS) automata.c
+	$(CC) -o main main.c reader.o node.o automata.o
 
 automata:
 	$(CC) $(CCFLAGS) node.c
@@ -12,5 +14,5 @@ automata:
 
 clean:
 	rm -rf *.o
-	rm -rf main automata
+	rm -rf reader main automata
 
