added token.c to compile/ added clean_o label/ added debug label in makefile

--- a/src/makefile
+++ b/src/makefile
@@ -6,13 +6,21 @@ all:
 	$(CC) $(CCFLAGS) reader.c
 	$(CC) $(CCFLAGS) node.c
 	$(CC) $(CCFLAGS) automata.c
-	$(CC) -o main main.c reader.o node.o automata.o
+	$(CC) $(CCFLAGS) token.c
+	$(CC) -o main main.c reader.o node.o automata.o token.o
+	make clean_o
 
 automata:
 	$(CC) $(CCFLAGS) node.c
 	$(CC) -o automata automata.c node.o
 
+clean_o:
+	rm -rf *.o
+
 clean:
 	rm -rf *.o
-	rm -rf reader main automata
+	rm -rf token reader main automata
+
+debug: CCFLAGS += -DDEBUG -g
+debug: all
 
